@@ -1,21 +1,8 @@
-FROM eclipse-temurin:21 as jre-build
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
-# Runtime
-FROM debian:buster-slim
-ENV TZ="Europe/Oslo"
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
-ENV JAVA_OPTS="-Dlogback.configurationFile=logback.xml"
-COPY --from=jre-build /javaruntime $JAVA_HOME
-
+FROM gcr.io/distroless/java21-debian12
+WORKDIR /app
 COPY build/install/* /
-
-USER nobody
+ENV JAVA_OPTS="-Dlogback.configurationFile=logback.xml"
+ENV TZ="Europe/Oslo"
+EXPOSE 8080
+USER nonroot
 CMD ["docker-kotlin-gradle-ktor-postgres"]
